{{$NEXT}}

1.91      2025 Oct 16
===
* Citation Metrics Report - added all 3 endpoints
* fixed post_response method in Astro::ADS to send json payload

1.90_70   2025 Jul 18 (TRIAL RELEASE)
====
* error attribute for Result object now a hash for better reporting
* adding a test module to provide a mocked dev key

1.90      2025 Feb 22
====
* initial interface to the ADS Search endpoint