@@ -1,5 +1,6 @@
 use Test2::V0;
 use Test2::Tools::Compare qw(number_gt);
+use Test2::Tools::Warnings;
 
 use lib qw|t/lib|;
 use Test::Astro::ADS;
@@ -74,6 +75,37 @@ subtest query => sub {
         field rows  => 20;
         end();
     }, 'Next 20 rows has correct start point';
+
+    my $bad_query;
+    like(
+        warning { $bad_query = $result->next(-1) },
+        qr/Bad value for number of rows: -1. Defaulting to 10/,
+        'Warning on negative rows'
+    );
+    is $bad_query, hash {
+        field q     => 'author:Paunzen';
+        field fl    => 'bibcode';
+        field start => 20;
+        field rows  => DNE();
+        end();
+    }, 'Next called with negative rows - exception caught';
+
+    is(
+        warnings { $bad_query = $result->next('twenty') },
+        array {
+            item match qr/Argument "twenty" isn't numeric in numeric gt/;
+            item match qr/Bad value for number of rows: twenty. Defaulting to 10/;
+            end();
+        },
+        'Expected warnings about non-numeric value being used in comparison'
+    );
+    is $bad_query, hash {
+        field q     => 'author:Paunzen';
+        field fl    => 'bibcode';
+        field start => 20;
+        field rows  => DNE();
+        end();
+    }, 'Next called with string - exception caught';
 };
 
 done_testing();
