@@ -1,4 +1,6 @@
 {{$NEXT}}
+===
+* bug in condition check on number of rows fixed by @esabol (Ed Sabol)
 
 1.91      2025 Oct 16
 ===
